Fixing the line height on media cards and the spacing below playlists

--- a/drupal/sites/all/themes/base/sass/base/modules/_video_playlist.scss
+++ b/drupal/sites/all/themes/base/sass/base/modules/_video_playlist.scss
@@ -72,7 +72,6 @@
 .playlist-wrapper-wrapper{
   background: none;
   padding: 15px 7px;
-  margin-bottom: 30px;
 
   @include breakpoint($breakpoint-tablet) {
     padding: 0;
