--- a/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
+++ b/drupal/sites/all/themes/tp4/sass/page/_campaigns.scss
@@ -265,6 +265,7 @@ body.campaign-display .card.node-campaign-card-media{
     }
 
     .playlist-wrapper-wrapper {
+        margin-bottom: 0;
         .bx-wrapper {
             ul {
                 li {
